<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="16dp">

    <TextView
        android:id="@+id/productTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingBottom="20dp"/>

    <Button
        android:id="@+id/addToCartButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:maxWidth="320dp"
        android:text="@string/prod_det__add_to_cart" />

</LinearLayout>