<?xml version="1.0" encoding="utf-8"?>
<ListView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/productList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" />